force-app/main/default/objects/SFMC_Credentials__mdt/SFMC_Credentials__mdt.object-meta.xml
<CustomObject>
    <description>SFMC Credentials custom metadata will store the credentials that are required for requesting auth token</description>
    <label>SFMC Credentials</label>
    <pluralLabel>SFMC Credentials</pluralLabel>
</CustomObject>