force-app/main/default/objects/SFMC_Credentials__mdt/fields/sfmcAccountId__c.field-meta.xml
<CustomField>
    <fullName>sfmcAccountId__c</fullName>
    <label>sfmcAccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>