force-app/main/default/objects/SFMC_Credentials__mdt/fields/sfmcClientSecret__c.field-meta.xml
<CustomField>
    <fullName>sfmcClientSecret__c</fullName>
    <label>sfmcClientSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>