force-app/main/default/objects/SFMC_Credentials__mdt/fields/sfmcStack__c.field-meta.xml
<CustomField>
    <fullName>sfmcStack__c</fullName>
    <label>sfmcStack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>